--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,19 @@
-APP_NAME=Laravel
+APP_NAME=WebShop
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:fUfmQ7SyIfufEu9cOd8ipf8QJYPaw78zJ9AWuelLzCQ=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://remak3.com/WebShop
+STORAGE_PATH=https://remak3.com/WebShop/storage/app/public
+PUBLIC_PATH=https://remak3.com/WebShop/public
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=remakthr_webshop
+DB_USERNAME=remakthr_webshop
+DB_PASSWORD=webshop1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
