--- a/.env.example
+++ b/.env.example
@@ -2,17 +2,17 @@ APP_NAME=WebShop
 APP_ENV=local
 APP_KEY=base64:fUfmQ7SyIfufEu9cOd8ipf8QJYPaw78zJ9AWuelLzCQ=
 APP_DEBUG=true
-APP_URL=https://remak3.com/WebShop
-STORAGE_PATH=https://remak3.com/WebShop/storage/app/public
-PUBLIC_PATH=https://remak3.com/WebShop/public
+APP_URL=http://webshop.pgdhrm.org.uk
+STORAGE_PATH=http://webshop.pgdhrm.org.uk/storage/app/public
+PUBLIC_PATH=http://webshop.pgdhrm.org.uk/public
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=remakthr_webshop
-DB_USERNAME=remakthr_webshop
+DB_DATABASE=pgdhtcua_webshop
+DB_USERNAME=pgdhtcua_webshop
 DB_PASSWORD=webshop1234
 
 BROADCAST_DRIVER=log
