--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "tinymce": "^5.5.1",
         "vue-axios": "^3.1.3",
         "vue-sweetalert2": "^4.1.1",
-        "vue-toast-notification": "^0.6.0"
+        "vue-toast-notification": "^0.6.0",
+        "vue2-dropzone": "^3.6.0"
     }
 }
